# Lab6_CV

./: .gitignore  CMakeLists.txt  libopencv_calib3d.4.5.1.dylib  libopencv_core.4.5.1.dylib  libopencv_features2d.4.5.1.dylib  libopencv_highgui.4.5.1.dylib  libopencv_imgcodecs.4.5.1.dylib  libopencv_imgproc.4.5.1.dylib  libopencv_objdetect.4.5.1.dylib  libopencv_xfeatures2d.4.5.1.dylib  libopencv_ximgproc.4.5.1.dylib
include/: tracker.h  tracking.h
src/: main.cpp  tracker.cpp  tracking.cpp
